--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: "3"
 services:
+  hello-world:
+    build: hello-world
+    ports: ["1337:1000"]
   bof-1:
     build: bof-1
     ports: ["2000:1000"]
